# viltrum_into_pbrt

./: .gitignore  CMakeLists.txt  External.cmake  Paths.cmake  README.md
functions/: functions.h
main/: allObj2PBRT.sh  exe_script.py  inverse.cc  pbrtMain.cc  render_adaptive.cc  render_control_variates.cc  render_main.cc  render_monte_carlo.cc  render_new.cc  render_newton_cotes.cc  render_old.cc  sphere_image.cc  sphere_sampler.cc  testF.cc
pbrt_changes/: integrators.cpp  integrators.h  sampler.h  samplers.h
photos/: image.hdr  image0.hdr  image1.hdr  image2.hdr  image3.hdr  imageColorFILM.hdr  spheresMaterials.pbrt
sampler/: viltrumSampler.h
src/: helloWorld.cc
utils/: parsePbrt.h  preparePBRT.h  save_image.h  spheres.h  tracers.h  tracers_parallel.h  viltrum_into_pbrt.h
